<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="사용자 정보"
                android:lines="1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="사용자 정보" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_get_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="사용자 정보 요청"
                app:layout_constraintBottom_toTopOf="@id/et_id"
                app:layout_constraintTop_toBottomOf="@id/et_user_info" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="아이디"
                android:lines="1"
                android:text="12341234"
                app:layout_constraintBottom_toTopOf="@id/et_id"
                app:layout_constraintTop_toBottomOf="@id/btn_get_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="패스워드"
                android:lines="1"
                android:text="12341234!A"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/et_id" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="로그인"
                app:layout_constraintBottom_toTopOf="@id/btn_logout"
                app:layout_constraintTop_toBottomOf="@id/et_pw" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="로그아웃"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/container_input"
            tools:text="결과 출력" />

        <FrameLayout
            android:id="@+id/fl_progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_color_20"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <include
                android:id="@+id/include_progress"
                layout="@layout/layout_circle_progress" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>