<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_spend_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/container_input"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_point"
            app:layout_constraintBottom_toTopOf="@id/btn_action"
            app:layout_constraintTop_toBottomOf="@id/rv_spend_list">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount"
                android:lines="1"
                android:textColor="@color/white"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@id/et_description"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tv_result"
                app:layout_constraintTop_toBottomOf="@id/et_amount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Result:"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="add"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_action2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_input" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_action2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="delete"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/btn_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_action"
            app:layout_constraintTop_toTopOf="@id/btn_action" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>